k3s/cluster/apps/nas-attached/audiobookshelf/workload/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  selector:
    app.kubernetes.io/name: audiobookshelf
    app.kubernetes.io/component: app
  ports:
    - name: http
      port: 80
      targetPort: http
